crates/oxc_react_compiler/tests/snapshots/reactive-control-dependency-from-interleaved-reactivity-for-test.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/reactive-control-dependency-from-interleaved-reactivity-for-test.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(1);
	const a = [];
	const b = [];
	b.push(props.cond);
	a.push(10);
	const c = [a];
	let x;
	for (let i = 0; i < c[0][0]; i++) {
		x = 1;
	}
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = [x];
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ cond: true }]
};
