crates/oxc_react_compiler/tests/snapshots/reactive-control-dependency-if.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/reactive-control-dependency-if.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(2);
	let x;
	if (props.cond) {
		x = 1;
	} else {
		x = 2;
	}
	let t0;
	if ($[0] !== x) {
		t0 = [x];
		$[0] = x;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [],
	sequentialRenders: [
		{ cond: true },
		{ cond: true },
		{ cond: false },
		{ cond: false },
		{ cond: true },
		{ cond: false },
		{ cond: true },
		{ cond: false }
	]
};
