crates/oxc_react_compiler/tests/snapshots/reactive-control-dependency-on-context-variable.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/reactive-control-dependency-on-context-variable.js
---
import { c as _c } from "react/compiler-runtime";
import { identity } from "shared-runtime";
function Component(props) {
	const $ = _c(4);
	let x;
	if ($[0] !== props) {
		const f = () => {
			if (props.cond) {
				x = 1;
			} else {
				x = 2;
			}
		};
		const f2 = identity(f);
		f2();
		$[0] = props;
		$[1] = x;
	} else {
		x = $[1];
	}
	let t0;
	if ($[2] !== x) {
		t0 = [x];
		$[2] = x;
		$[3] = t0;
	} else {
		t0 = $[3];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [],
	sequentialRenders: [
		{ cond: true },
		{ cond: true },
		{ cond: false },
		{ cond: false },
		{ cond: true },
		{ cond: false },
		{ cond: true },
		{ cond: false }
	]
};
